[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
libc = "0.2"
discord-rpc-client = "0.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.100"
parse_int = "0.6.0"
dotenv = "0.15.0"
rand = "0.8.5"